--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,91 @@
 body {
-  background-color: #f9f7fe;
+  background: linear-gradient(-225deg, #d4ffec 0%, #57f2cc 48%, #4596fb 100%);
+  background-repeat: no-repeat;
   font-family: "Roboto", sans-serif;
 }
 
+header {
+  border-bottom: 5px solid white;
+  padding: 0 0 30px 0;
+}
+
+a {
+  color: #885df1;
+  font-style: italic;
+}
 .weather-app-container {
-  background-color: white;
+  background: #ecfffb;
   max-width: 600px;
-  margin: 45px auto;
+  margin: 120px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
   padding: 30px;
 }
 
+.form-input-city {
+  background-color: #f9f7fe;
+  border: none;
+  padding: 15px 20px;
+  width: 80%;
+  font-size: 16px;
+  border-radius: 6px;
+}
+
+.form-input-button {
+  background-color: #885df1;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  margin-left: 5px;
+  color: white;
+}
+
+.weather-app-main {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0;
+}
+
+.weather-app-head {
+  font-size: 20px;
+  margin: 0;
+  line-height: 48px;
+}
+
+.weather-app-details {
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.weather-app-details strong {
+  color: #f65282;
+}
+
+.weather-app-box {
+  display: flex;
+}
+
+.weather-app-icon {
+  font-size: 44px;
+  margin-top: 22px;
+}
+
+.weather-app-temperature {
+  font-size: 88px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.weather-app-unit {
+  margin-top: 16px;
+  font-size: 28px;
+}
+footer {
+  border-top: 5px solid white;
+  padding: 30px 0 0 0;
+  font-size: 13px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.6);
+}
