--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,11 @@ a {
   color: #469af9;
   font-style: italic;
 }
+
+.logo {
+  width: 200px;
+  margin-bottom: 10px;
+}
 .weather-app-container {
   background: #ecfffb;
   max-width: 600px;
