--- a/src/styles.css
+++ b/src/styles.css
@@ -1,68 +1,93 @@
 body {
-  background: linear-gradient(-225deg, #d4ffec 0%, #57f2cc 48%, #4596fb 100%);
+  background: linear-gradient(
+    111.5deg,
+    rgb(228, 247, 255) 21.9%,
+    rgb(255, 216, 194) 92.2%
+  );
   background-repeat: no-repeat;
-  font-family: "Roboto", sans-serif;
+  font-family: "Poppins", sans-serif;
   min-height: 100vh;
 }
 
 header {
-  border-bottom: 5px solid white;
+  border-bottom: 1px solid #ffecda;
   padding: 0 0 30px 0;
 }
+h1 {
+  font-size: 40px;
+  color: #7a77b9;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+h2 {
+  font-size: 60px;
+  color: #f70776;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-style: italic;
+  text-align: center;
+  margin: 0;
+
+  line-height: 80px;
+}
 a {
-  color: #469af9;
+  color: #f70776;
   font-style: italic;
 }
 
-.logo {
-  width: 200px;
-  margin-bottom: 10px;
-}
 .weather-app-container {
-  background: #ecfffb;
+  background: white;
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
   padding: 30px;
+  padding-bottom: 10px;
 }
 
 .form-input-city {
-  background-color: #f9f7fe;
+  background: #ffecda;
   border: none;
   padding: 15px 20px;
   width: 80%;
   font-size: 16px;
   border-radius: 6px;
+  color: #f70776;
 }
 
 .form-input-button {
-  background-color: #469af9;
-  padding: 15px 30px;
+  background: #ffecda;
+  padding: 14px 18px;
   border: none;
   border-radius: 6px;
   font-size: 16px;
   margin-left: 5px;
-  color: white;
+  color: #f70776;
 }
 
 .weather-app-main {
   display: flex;
   justify-content: space-between;
-  padding: 30px 0;
 }
 
-.weather-app-city {
-  font-size: 20px;
+.time {
+  text-align: center;
   margin: 0;
-  line-height: 48px;
 }
 
 .weather-app-details {
   font-size: 16px;
   line-height: 24px;
-  color: rgba(0, 0, 0, 0.6);
+  margin-left: 50px;
+}
+
+.material-symbols-outlined {
+  color: #4d4780;
+  margin: 0;
+  padding: 0;
 }
 
 .weather-app-details strong {
@@ -75,21 +100,29 @@ a {
 
 .weather-app-icon {
   font-size: 88px;
+  margin: 0;
+  margin-top: 30px;
 }
 
 .weather-app-temperature {
   font-size: 88px;
   font-weight: bold;
+  color: #4d4780;
+  margin: 0;
+  margin-top: 25px;
 }
 
 .weather-app-unit {
-  margin-top: 16px;
+  margin-top: 50px;
   font-size: 28px;
+  color: #4d4780;
+  margin-right: 50px;
+  font-weight: bold;
 }
 footer {
-  border-top: 5px solid white;
-  padding: 30px 0 0 0;
+  border-top: 1px solid #ffecda;
+  padding: 5px 0 0 0;
   font-size: 13px;
   text-align: center;
-  color: rgba(0, 0, 0, 0.6);
+  color: #4d4780;
 }
